[package]
name = "chess-engine"
version = "0.1.2"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
description = "A dependency-free chess engine library built to run anywhere."
documentation = "https://docs.rs/chess-engine/"
readme = "README.md"
homepage = "https://github.com/adam-mcdaniel/chess-engine"
repository = "https://github.com/adam-mcdaniel/chess-engine"
license = "MIT"
keywords = ["chess", "engine", "game", "board", "ai"]
categories = [
    "games",
    "no-std",
    "game-engines",
    "game-development",
    "algorithms"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/bin.rs"
name = "chess"

[[bin]]
path = "thunderdome.rs"
name = "thunderdome"

[dependencies]
rayon = "1.5.1"
dashmap = "5.4.0"
dotenv = "0.15.0"
mongodb = { version = "2.4.0", default-features = false, features = ["tokio-sync"] }
rand = "0.8.4"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
serde = "1.0.159"